src/objects/History_Tracking__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is to create a lookup relationship with the Account object</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>History Tracking</relationshipLabel>
        <relationshipName>History_Tracking</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is to create a lookup relationship with the Case object</description>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>History Tracking</relationshipLabel>
        <relationshipName>History_Tracking</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is to create a lookup relationship with the Contact object</description>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>History Tracking</relationshipLabel>
        <relationshipName>History_Tracking</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>External_ID__c</fullName>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Field_API_Name__c</fullName>
        <label>Field API Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is to create a lookup relationship with the Lead object</description>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>History Tracking</relationshipLabel>
        <relationshipName>History_Tracking</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Link_to_record__c</fullName>
        <formula>HYPERLINK(&quot;https://dazn9.lightning.force.com/&quot;+Record_Id__c , &apos;Link to record in Salesforce&apos; )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Link to record</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_Value__c</fullName>
        <label>New Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Object_Name__c</fullName>
        <label>Object Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Old_Value__c</fullName>
        <label>Old Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order_Item__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is to create a lookup relationship with the Order_Item__c object</description>
        <label>Order Item</label>
        <referenceTo>Order_Item__c</referenceTo>
        <relationshipLabel>History Tracking</relationshipLabel>
        <relationshipName>History_Tracking</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is to create a lookup relationship with the Order__c object</description>
        <label>Order</label>
        <referenceTo>Order__c</referenceTo>
        <relationshipLabel>History Tracking</relationshipLabel>
        <relationshipName>History_Tracking</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Record_Id__c</fullName>
        <externalId>true</externalId>
        <label>Record Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Temp__c</fullName>
        <formula>If( Time_of_Last_Change__c &lt; Now() , &apos;Active&apos;, &apos;Inactive&apos; )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Temp</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Time_of_Last_Change__c</fullName>
        <label>Time of Last Change</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Time_spend__c</fullName>
        <formula>Total_Time_Spent__c  /60</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Time spend</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Time_till_status__c</fullName>
        <formula>(Time_of_Last_Change__c - Case__r.CreatedDate) *24</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Time till status</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Time_Spent__c</fullName>
        <formula>(CreatedDate -  Time_of_Last_Change__c)*24*60*60</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Time Spent</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>History Tracking</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Field_API_Name__c</columns>
        <columns>New_Value__c</columns>
        <columns>Object_Name__c</columns>
        <columns>Old_Value__c</columns>
        <columns>Record_Id__c</columns>
        <columns>Time_of_Last_Change__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Total_Time_Spent__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OWNER.FIRST_NAME</field>
            <operation>equals</operation>
            <value>Pascal</value>
        </filters>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>HS-{0000000}</displayFormat>
        <label>SObject History Tracking Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>History Tracking</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>